# ai-cli

./: README.md  pyproject.toml  requirements.txt  setup.py
OLD/: ai.sh
ai_cli/: chat_app.py  config_manager.py  llm_client.py  prompt_processor.py  summary.md
ai_cli/data/: default_config.json
local/: .ai_cli_config.json
local/ai_cli/: ib.md
